--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   uuid: ^4.1.0
   riverpod: ^2.4.4
   intl: ^0.18.1
+  path_provider: ^2.1.1
+  flutter_secure_storage: ^9.0.0
+  widgets_to_image: ^0.0.2
 
 dev_dependencies:
   flutter_test:
